# fa-service-core

./: Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
alembic/: env.py
core/: __init__.py  actions.py  audit.py  db.py  errors.py  idempotency.py  migrations.py  models.py  observability.py  outbox.py  query_params.py  repository.py  schema_api.py  site_resolver.py  uow.py  versions.py
examples/: basic_usage.py
scripts/: postgres_init.sql
tests/: __init__.py  conftest.py
tests/core/: test_audit.py  test_db.py
