[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[project]
name = "fa-service-core"
version = "0.2.0"
description = "FastAPI microservices core library for CMS with multi-tenancy, RLS, and async SQLAlchemy"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "dev@example.com"},
]
keywords = ["fastapi", "microservices", "sqlalchemy", "cms", "multi-tenant", "rls"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi==0.117.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.29.0",
    "pydantic==2.10.2",
    "uvicorn[standard]==0.32.0",
    "jsonpatch==1.33",
    "asyncio-compat==0.1.2",
    "python-multipart==0.0.12",
    "httpx==0.28.1",
    "alembic==1.16.5",
    "redis==5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "mypy==1.13.0",
    "ruff==0.7.4",
    "black==24.10.0",
    "isort==5.13.2",
    "pre-commit==4.0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
target-version = "py313"
line-length = 100
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "S", "T20", "Q", "SIM"]
ignore = ["E501", "B008", "S101"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "S106"]

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
